--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
 	"description": "tutorial to learn mern",
 	"main": "server.js",
 	"scripts": {
+		"client-install": "npm start --prefix client",
 		"start": "node server.js",
-		"server": "nodemon server.js"
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "Andrea Mele",
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
+		"concurrently": "^4.1.0",
 		"express": "^4.16.4",
 		"gravatar": "^1.8.0",
 		"jsonwebtoken": "^8.4.0",
