--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"classnames": "^2.2.6",
+		"cors": "^2.8.5",
 		"jwt-decode": "^2.2.0",
 		"react": "^16.8.2",
 		"react-dom": "^16.8.2",
+		"react-materialize": "^2.6.0",
 		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.5",
