--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,17 @@
 		"classnames": "^2.2.6",
 		"cors": "^2.8.5",
 		"jwt-decode": "^2.2.0",
+		"moment": "^2.24.0",
 		"react": "^16.8.2",
 		"react-dom": "^16.8.2",
 		"react-materialize": "^2.6.0",
+		"react-moment": "^0.8.4",
 		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.5",
+		"react-toastify": "^4.5.2",
 		"redux": "^4.0.1",
+		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0"
 	},
 	"scripts": {
